force-app/main/default/objects/Revenue__c/Revenue__c.object-meta.xml
<CustomObject>
    <description>Uriage__c</description>
    <label>売上</label>
    <nameField>
        <displayFormat>売上-{00000}</displayFormat>
        <label>売上名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>