force-app/main/default/objects/Revenue__c/fields/AccountTitle__c.field-meta.xml
<CustomField>
    <fullName>AccountTitle__c</fullName>
    <label>勘定科目</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事務所課金（基本・初期費用）</fullName>
            </value>
            <value>
                <fullName>事務所課金（基本・月額）</fullName>
            </value>
            <value>
                <fullName>事務所課金（集客強化・月額）</fullName>
            </value>
            <value>
                <fullName>弁護士課金売上高</fullName>
            </value>
            <value>
                <fullName>弁護士課金売上高(初期費用)</fullName>
            </value>
            <value>
                <fullName>電話代行サービス売上高</fullName>
            </value>
            <value>
                <fullName>ASP売上高</fullName>
            </value>
            <value>
                <fullName>cloudsign売上高</fullName>
            </value>
            <value>
                <fullName>その他売上高</fullName>
            </value>
            <value>
                <fullName>その他（弁護士）売上高</fullName>
            </value>
            <value>
                <fullName>その他売上高（前受金）</fullName>
            </value>
            <value>
                <fullName>プレミアム会員売上高</fullName>
            </value>
            <value>
                <fullName>マッチング売上高</fullName>
            </value>
            <value>
                <fullName>計上保留</fullName>
            </value>
            <value>
                <fullName>広告売上高</fullName>
            </value>
            <value>
                <fullName>広告売上高（Book for Lawyers）</fullName>
            </value>
            <value>
                <fullName>広告（税理士）売上高</fullName>
            </value>
            <value>
                <fullName>広告（弁護士）売上高</fullName>
            </value>
            <value>
                <fullName>雑収入（未計上）</fullName>
            </value>
            <value>
                <fullName>事務所課金（集客強化・初期費用）</fullName>
            </value>
            <value>
                <fullName>弁護士課金売上高（オプション）</fullName>
            </value>
            <value>
                <fullName>弁護士課金売上高（事務所課金・損失補てん）</fullName>
            </value>
            <value>
                <fullName>立替金</fullName>
            </value>
            <value>
                <fullName>ﾓﾊﾞｲﾙ・ｽﾏﾎ公式ｻｲﾄ売上高</fullName>
            </value>
            <value>
                <fullName>アドゲイナー売上高</fullName>
            </value>
            <value>
                <fullName>リーチローカル売上高</fullName>
            </value>
            <value>
                <fullName>弁護士ドットコムキャリア売上高</fullName>
            </value>
            <value>
                <fullName>弁護士ドットコムProホームページ売上高</fullName>
            </value>
            <value>
                <fullName>税理士ドットコムProホームページ売上高</fullName>
            </value>
            <value>
                <fullName>違約金収入</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>