force-app/main/default/objects/Revenue__c/fields/BillingTargetMonth__c.field-meta.xml
<CustomField>
    <fullName>BillingTargetMonth__c</fullName>
    <formula>IF( ISPICKVAL( Opportunity__r.CollectionMethod__c, &apos;口座振替（初回2回目振込）&apos;),
IF( AND( ISPICKVAL( Opportunity__r.Type, &apos;新規&apos;), OR( CollectionTimes__c = 1, CollectionTimes__c = 2)),
Opportunity__r.PostingStartDate__c,
SalesMonth__c),
SalesMonth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求対象月</label>
    <type>Date</type>
</CustomField>