force-app/main/default/objects/Revenue__c/fields/CollectionMethod__c.field-meta.xml
<CustomField>
    <fullName>CollectionMethod__c</fullName>
    <formula>TEXT(Opportunity__r.CollectionMethod__c )</formula>
    <label>回収方法</label>
    <type>Text</type>
</CustomField>