force-app/main/default/objects/Revenue__c/fields/CollectionTimes__c.field-meta.xml
<CustomField>
    <fullName>CollectionTimes__c</fullName>
    <defaultValue>1</defaultValue>
    <label>回収回数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>