force-app/main/default/objects/Revenue__c/fields/InvoiceInformation__c.field-meta.xml
<CustomField>
    <fullName>InvoiceInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求書情報</label>
    <referenceTo>InvoiceInformation__c</referenceTo>
    <relationshipLabel>売上</relationshipLabel>
    <relationshipName>revenues</relationshipName>
    <type>Lookup</type>
</CustomField>