force-app/main/default/objects/Revenue__c/fields/JournalizationCreatingTarget__c.field-meta.xml
<CustomField>
    <fullName>JournalizationCreatingTarget__c</fullName>
    <formula>AND(
  TEXT(AccountTitle__c)!= &apos;計上保留&apos;,
  TEXT(AccountTitle__c)!= &apos;その他売上高（前受金）&apos;,
  TEXT(AccountTitle__c)!= &apos;立替金&apos;,
  TEXT(AccountTitle__c)!= &apos;税コムPro売上高（前受金）&apos;,
  TEXT(AccountTitle__c)!= &apos;cloudsign売上高&apos;,
  TEXT(AccountTitle__c)!= &apos;雑収入（未計上）&apos;
)</formula>
    <label>仕訳作成対象</label>
    <type>Checkbox</type>
</CustomField>