force-app/main/default/objects/Revenue__c/fields/OpportunityStatus__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStatus__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談ステータス</label>
    <type>Text</type>
</CustomField>