force-app/main/default/objects/Revenue__c/fields/OrgA_UriageId__c.field-meta.xml
<CustomField>
    <fullName>OrgA_UriageId__c</fullName>
    <externalId>true</externalId>
    <label>組織A売上レコードID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>