force-app/main/default/objects/Revenue__c/fields/OrganizationA_RevenueId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationA_RevenueId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>【外部】組織A売上ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>