force-app/main/default/objects/Revenue__c/fields/ProductsNameModifyingDisplay__c.field-meta.xml
<CustomField>
    <fullName>ProductsNameModifyingDisplay__c</fullName>
    <label>商品名(修正表示)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>