force-app/main/default/objects/Revenue__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <formula>TotalAmountTaxExcluded__c * Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>見込</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>