force-app/main/default/objects/Revenue__c/fields/SalesMonth__c.field-meta.xml
<CustomField>
    <fullName>SalesMonth__c</fullName>
    <label>売上月</label>
    <type>Date</type>
</CustomField>