force-app/main/default/objects/Revenue__c/fields/TaxDifferenceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>TaxDifferenceAdjustment__c</fullName>
    <label>消費税差額調整</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>