force-app/main/default/objects/Revenue__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <formula>/*
IF
(
TEXT(TaxRateMaster__c)=&quot;非課税&quot; ,0,
IF
(
TEXT(TaxRateMaster__c)=&quot;0.08&quot; ,0.08,
IF
(
TEXT(TaxRateMaster__c)=&quot;0.1&quot; ,0.1,
IF
( 
Opportunity__r.Account.ExemptionTarget__c , 0 ,
IF
( 
SalesMonth__c &lt; DATE(2014, 4,1),0.05,
IF
( 
SalesMonth__c &lt; DATE(2019, 10,1),0.08
,0.1
)
)
)
)
)
)
*/
CASE(TEXT(TaxRateMaster__c),
&quot;非課税&quot; ,0,
&quot;0.08&quot; ,0.08,
0.1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>消費税率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>