force-app/main/default/objects/Revenue__c/fields/TaxRateMaster__c.field-meta.xml
<CustomField>
    <fullName>TaxRateMaster__c</fullName>
    <label>消費税個別調整</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>非課税</fullName>
            </value>
            <value>
                <fullName>0.08</fullName>
                <label>8%</label>
            </value>
            <value>
                <fullName>0.1</fullName>
                <label>10%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>