force-app/main/default/objects/Revenue__c/fields/TotalAmountIncludingTax__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountIncludingTax__c</fullName>
    <formula>TotalAmountTaxExcluded__c + Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>合計金額(税込)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>