force-app/main/default/objects/Revenue__c/fields/TotalAmountTaxExcluded__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountTaxExcluded__c</fullName>
    <formula>Quantity__c * UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>合計金額(税抜)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>