force-app/main/default/objects/Revenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>TotalAmountTaxExcluded__c</columns>
    <columns>TotalAmountIncludingTax__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>ProductName__c</columns>
    <columns>SalesMonth__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>